30 Days of Python

--- a/Day_002/Variables.ipynb
+++ b/Day_002/Variables.ipynb
@@ -18,6 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Inside 30DaysOfPython create a folder called day_2. Inside this folder create a file named variables.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Write a python comment saying 'Day 2: 30 Days of python programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### 3. Declare a first name variable and assign a value to it"
    ]
   },
