--- a/Day_018/Regular_Expression_Assignment.ipynb
+++ b/Day_018/Regular_Expression_Assignment.ipynb
@@ -18,10 +18,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. What is the most frequent word in the following paragraph?\n",
-    "paragraph = 'I love teaching. If you do not love teaching what else can you love. I love Python if you do not love something which can give you all the capabilities to develop an application what else can you love.\n",
-    "\n",
-    "    [\n",
+    "### 1. What is the most frequent word in the following paragraph?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\n",
     "    (6, 'love'),\n",
     "    (5, 'you'),\n",
     "    (3, 'can'),\n",
@@ -52,7 +65,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "paragraph = 'I love teaching. If you do not love teaching what else can you love. I love Python if you do not love something which can give you all the capabilities to develop an application what else can you love.'\n",
+    "words = paragraph.replace('.','').split(' ')\n",
+    "dict = {}\n",
+    "for word in words:\n",
+    "    dict[word] = dict.get(word,0) + 1\n",
+    "sort_keysval = sorted(dict.items(),key = lambda x:x[1], reverse=True)\n",
+    "sort_keysval[0] "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +87,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "points = ['-12', '-4', '-3', '-1', '0', '4', '8']\n",
+    "sorted_points =  [-12, -4, -3, -1, -1, 0, 2, 4, 8]\n",
+    "distance = 8 -(-12) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = 'The position of some particles on the horizontal x-axis are -12, -4, -3 and -1 in the negative direction, 0 at origin, 4 and 8 in the positive direction. Extract these numbers from this whole text and find the distance between the two furthest particles.'\n",
+    "regex= r'-\\d|\\d'\n",
+    "points = re.findall(regex,string)\n",
+    "print(points)   \n",
+    "points.sort()\n",
+    "numbers = [int(i) for i in points]\n",
+    "numbers.sort()  \n",
+    "distance = numbers[-1] - numbers[0]\n",
+    "print(f'The distance between the two furthest particles is {distance} ') "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,11 +125,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pattern"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r\"^[_a-z]\\w*$\"\n",
+    "def is_valid_variable(name):\n",
+    "    '''Identify if a string is a valid Python variable'''\n",
+    "    pattern = r\"^[_a-z]\\w*$\"\n",
+    "    if not re.match(pattern,name):\n",
+    "        print(False)\n",
+    "    else:\n",
+    "        print(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identifies if a string is a valid python variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_valid_variable('Name')\n",
+    "is_valid_variable('Name')\n",
+    "is_valid_variable('Nname')\n",
+    "is_valid_variable('Name')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +185,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sentence = '''%I $am@% a %tea@cher%, &and& I lo%#ve %tea@ching%;. There $is nothing; &as& mo@re rewarding as educa@ting &and& @emp%o@wering peo@ple. ;I found tea@ching m%o@re interesting tha@n any other %jo@bs. %Do@es thi%s mo@tivate yo@u to be a tea@cher!?'''\n",
+    "\n",
+    "print(clean_text(sentence));\n",
+    "I am a teacher and I love teaching There is nothing as more rewarding as educating and empowering people I found teaching more interesting than any other jobs Does this motivate you to be a teacher\n",
+    "print(most_frequent_words(cleaned_text)) # [(3, 'I'), (2, 'teaching'), (2, 'teacher')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = '''%I $am@% a %tea@cher%, &and& I lo%#ve %tea@ching%;. There $is nothing; &as& mo@re rewarding as educa@ting &and& @emp%o@wering peo@ple. ;I found tea@ching m%o@re interesting tha@n any other %jo@bs. %Do@es thi%s mo@tivate yo@u to be a tea@cher!?'''\n",
+    "pattern = r'[^\\w\\s]'\n",
+    "clean_sentence = re.sub(pattern,'',sentence)\n",
+    "\n",
+    "def most_frequent_words(text):\n",
+    "    '''Returns the three most frequent words in clean sentences i.e. sentences without punctuation marks.\n",
+    "    '''\n",
+    "    words = text.split()\n",
+    "    d = {}\n",
+    "    for word in words:\n",
+    "        d[word] = d.get(word,0) + 1\n",
+    "    list = [(val,key) for key,val in d.items()]\n",
+    "    list.sort(reverse=True)\n",
+    "    return list[:3]\n",
+    "\n",
+    "most_frequent_words(clean_sentence)"
+   ]
   }
  ],
  "metadata": {
