30 Days of Python

--- a/Day_022/Web_Scraping_Assignment.ipynb
+++ b/Day_022/Web_Scraping_Assignment.ipynb
@@ -8,11 +8,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Scrape the following website and store the data as json file(url = 'http://www.bu.edu/president/boston-university-facts-stats/')."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scrape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://www.bu.edu/president/boston-university-facts-stats/'\n",
+    "response = requests.get(url)\n",
+    "content = response.content\n",
+    "soup = BeautifulSoup(content, 'html.parser')\n",
+    "facts = soup.body.get_text()\n",
+    "print(soup.body.get_text())\n",
+    "with open('boston_facts.json','w') as f:\n",
+    "    json.dump(facts,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Extract the table in this url (https://archive.ics.uci.edu/ml/datasets.php) and change it to a json file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://archive.ics.uci.edu/ml/datasets.php'\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "content = response.content \n",
+    "soup = BeautifulSoup(content, 'html.parser') \n",
+    "print(soup.title) \n",
+    "print(soup.title.get_text()) \n",
+    "print(soup.body) \n",
+    "print(response.status_code)\n",
+    "\n",
+    "table = soup.find('table', attrs={'border': '1','cellpadding':'5'})\n",
+    "table_json = json.dumps(table.get_text())\n",
+    "print(table.get_text())\n",
+    "with open('dataset_table.json','w') as f:\n",
+    "    f.write(table_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Scrape the presidents table and store the data as json(https://en.wikipedia.org/wiki/List_of_presidents_of_the_United_States). The table is not very structured and the scrapping may take very long time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://en.wikipedia.org/wiki/List_of_presidents_of_the_United_States'\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "table = soup.find('table', {'class': 'wikitable sortable'})\n",
+    "headers = [header.text.strip() for header in table.find_all('th')]\n",
+    "rows = []\n",
+    "for row in table.find_all('tr')[1:]:\n",
+    "    cells = [cell.text.strip() for cell in row.find_all('td')]\n",
+    "    rows.append(dict(zip(headers, cells)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -Store the data as JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('presidents.json', 'w') as f:\n",
+    "    json.dump(rows, f)"
+   ]
   }
  ],
  "metadata": {
