--- a/Day_023/Virtual_Environment_Assignment.ipynb
+++ b/Day_023/Virtual_Environment_Assignment.ipynb
@@ -8,11 +8,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1. Create a project directory with a virtual environment based on the example given above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Answer: Created\n"
+   ]
   }
  ],
  "metadata": {
